Kubernetes/ingress-project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /eplant(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: eplant-cs
                port:
                  number: 80

          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80

          - path: /java

            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8081
